<resources>
    <string name="app_name">PokéMart</string>
    <string name="pokemart">PokéMart</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="artwork_of_pokemart">Artwork of Pokemart</string>
    <string name="pokemart_icon">Pokemart Icon</string>
    <string name="enter_password_again">Enter Password again</string>
    <string name="item_description">Item Description</string>
    <string name="price_placeholder">¥ 0</string>
    <string name="buy">Buy</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="item_image">Item Image</string>
    <string name="quantity">Quantity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="minus">-</string>
    <string name="add">+</string>
    <string name="stock">Stock:</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="total">Total: </string>
    <string name="tax">Tax:</string>
    <string name="net_total">Sub Total:</string>
    <string name="checkout">Checkout</string>
    <string name="submit">Submit</string>
    <string name="personal_info">Personal Information</string>
    <string name="card_number_hint">Credit Card Number</string>
    <string name="name_hint">Card Holder Name</string>
    <string name="expiration_hint">MM/YY</string>
    <string name="cvv_hint">CVV</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="apartment">Apt/Suite</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="postal_code">Postcode</string>
    <string name="credit_card_info">Credit Card Information</string>
    <string name="delete">Delete</string>
    <string name="emailerror">Enter a valid email address</string>
    <string name="passworderror">Enter a password with at least 6 characters</string>
    <string name="passwordrepeat">Passwords do not match</string>
    <string name="required">Field is required</string>
    <string name="provinceerror">Enter a valid province in AA format</string>
    <string name="postcodeerror">Enter a valid postal code</string>
    <string name="cardnoerror">Enter a valid credit card number</string>
    <string name="cardexpiryerror">Enter a valid expiration date</string>
    <string name="cvverror">Enter a valid CVV</string>
    <string name="title_activity_thank_you">ThankYou</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="thank_you">Thank You</string>
    <string name="back">Back</string>
    <string name="credit_card">Credit CARD</string>
    <string name="no_items_in_the_cart">No Items in the Cart</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="payment_information">Payment Information</string>
    <string name="search">Search</string>

    <string-array name="spinner">
        <item>Credit Card</item>
        <item>Debit Card</item>
        <item>PayPal</item>
    </string-array>
</resources>