<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/item_image"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/pokemart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokemart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemPrice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemIcon"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/item_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemName"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:text="@string/price_placeholder"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@id/itemPrice"
        app:layout_constraintTop_toBottomOf="@id/itemIcon"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/quantityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/itemQuantity"
        android:padding="18sp"
        android:text="@string/quantity"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemDescription"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/decreaseQuantity"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantityLabel"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="?attr/cardBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantityLabel"
        app:layout_constraintVertical_bias="0">

        <EditText
            android:id="@+id/itemQuantity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:autofillHints="Quantity"
            android:background="@android:color/transparent"
            android:hint="@string/one"
            android:text="@string/one"
            android:inputType="number"
            android:textAlignment="center" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/increaseQuantity"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantityLabel"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/buyBtn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decreaseQuantity"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/addCartBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/buyBtn"
        app:layout_constraintTop_toBottomOf="@id/decreaseQuantity"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>