<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:id="@+id/main">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/itemIcon"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/item_image"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/pokemart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemart"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/item_description"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@+id/itemName"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintWidth_percent="0.65" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:text="@string/price_placeholder"
            android:textSize="18sp"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@id/itemName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            android:gravity="center"/>

        <TextView
            android:id="@+id/quantityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/itemQuantity"
            android:text="@string/quantity"
            android:visibility="gone"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@id/itemDescription"
            app:layout_constraintVertical_bias="0.05" />

        <Button
            android:id="@+id/decreaseQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="24sp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@id/quantityLabel"
            app:layout_constraintVertical_bias="0.5"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@id/quantityLabel"
            app:layout_constraintVertical_bias="0.5"
            android:background="?attr/cardBackgroundColor">

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:autofillHints="Quantity"
                android:background="@android:color/transparent"
                android:hint="@string/one"
                android:inputType="number"
                android:textAlignment="center" />
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/increaseQuantity"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            app:layout_constraintVertical_bias="0.5"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@id/quantityLabel" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Widget.MaterialComponents.Button"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toBottomOf="@id/decreaseQuantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/update"/>

        <ImageView
            android:id="@+id/removeCartBtn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="56dp"
            android:layout_height="36dp"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/itemIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:tint="?attr/colorSecondary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
